--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								<div class="personal_text">
 									<h5>Hi everyone, this is</h5>
 									<div class="Hello"> <h3>Anurag Nandish</h3> </div>
-									<h4>MERN student at christ university</h4>
+									<h4>Student at christ university</h4>
 
 									<p>I I am a fitness enthusiast.<br>Love playing football and swimming. <br> Aspiring to complete my MBA and secure a marketing job.</p>
 									
